# anfenger

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  intro.html  libraries_explanation.html  objects.inv  pybind_explanation.html  pyproject.toml  search.html  searchindex.js  setup.py
ASCsoft.egg-info/: PKG-INFO  SOURCES.txt
_sources/: intro.md  libraries_explanation.md  pybind_explanation.md
demos/: CMakeLists.txt  demo_matrix.cpp  demo_vector.cpp  lapack_vergleich.hpp  lu_demo.cpp  test_lapack
docs/: _config.yml  _toc.yml  intro.md  libraries_explanation.md  pybind_explanation.md
py_demos/: demo_vector.py  timing_matmat.py
src/: bind_bla.cpp  lapack_interface.hpp  matrix.hpp  matrix_inverse_neu.hpp  matrixexpr  matrixexpr.hpp  vecexpr.hpp  vector.hpp
tests/: CMakeLists.txt  test_lapack.cc  test_matrix_mul.cpp
